Mcpods 6516 delete features or single feature by ID (#116)
* WIP api implementation

* implement update multiple features, one test

* wip

* update one feature by id

* add test

* add test

* add test

* align tests, autoformat

* allow returned feature collection to specify updated

* revert previous change, extract features twice in transformWriteResultToXyzCollectionResponse

* adjust result helper to not rely on cursor reposition

* switch to test helper class

* add deleted features readout ability

* decouple update feature test resource from create

* add test

* add test

* add test

* explicit imports

* autoformat

* api implementation

* renaming correctly to upsert

* renaming correctly to upsert

* fix cherry pick error

* autoformat

* decouple upsert and update tests completely from create

* improve test assertion

* resolve merge conflict

* openapi

* implementation

* add test

* TODO

* add test, autoformat, fix openapi yaml

* fix mock, fix casting bug

* bring out common code

* correct description

* add test

* fix delete by ID, add test

* PR review comment

* address PR review comment

* add test

* geometries for feature creating tests

* geometries for feature reading tests

* geometries for feature updating tests

* resolve merge conflicts

* MCPODS-6516 deleting be minimal feature instead of (id, uuid) pair

* MCPODS-6516 no elements strategy

* remove shortcut query parameter call to avoid possible future overhead

* introduce boolean to differentiate

* correct test case numbering

* reordering tests

* fix test storage creation

---------
